--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,29 +1,18 @@
-# Simple workflow for deploying static content to GitHub Pages
 name: Deploy static content to Pages
 
 on:
-  # Runs on pushes targeting the default branch
   push:
     branches: ["main"]
-
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
   pages: write
   id-token: write
 
-# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
-# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
 concurrency:
   group: "pages"
   cancel-in-progress: false
-
-env:
-  # Setting an environment variable with the value of a configuration variable
-  NEXT_PUBLIC_BASE_PATH: ${{ vars.BASE_PATH }}
 
 jobs:
   deploy:
@@ -32,26 +21,22 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
-      # Node.jsの準備
       - uses: actions/checkout@v4
+
       - name: Use Node.js v20
         uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: "npm"
-      # インストール
-      - run: npm ci
-      # ビルド
-      - run: npm run build --if-present
+          cache: npm
 
-      # デプロイ
-      - name: Setup Pages
-        uses: actions/configure-pages@v4
+      - run: npm ci
+      - run: npm run build --if-present   # ← `next export` などで ./out が出力されることを確認
+
       - name: Upload artifact
-        uses: actions/upload-pages-artifact@v1
+        uses: actions/upload-pages-artifact@v3
         with:
-          # Upload entire repository
-          path: './out/'
+          path: ./out
+
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v2
+        uses: actions/deploy-pages@v4
